--- a/index.html
+++ b/index.html
@@ -1,18 +1,67 @@
-Privacy Policy for MyApp
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Privacy Policy for MyApp</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      margin: 20px;
+      padding: 0;
+      background-color: #f9fafb;
+      color: #374151;
+    }
+    h1, h2 {
+      color: #1e3a8a;
+    }
+    p {
+      margin-bottom: 16px;
+    }
+    a {
+      color: #4f46e5;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 20px;
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>Privacy Policy for MyApp</h1>
+    <p><strong>Effective Date:</strong> 07-Mar-2025</p>
 
-Effective Date: 07-Mar-2025
+    <h2>Information We Collect</h2>
+    <p><strong>Camera Access:</strong> Our app uses the device's camera to capture images/videos for scanning barcodes or taking photos related to user transactions. We do not store or share any images/videos captured by the camera unless explicitly authorized by the user.</p>
 
-1. Information We Collect
-   - Camera Access: Our app uses the device's camera to capture images/videos for [specific purpose, e.g., scanning barcodes, taking photos]. We do not store or share any images/videos captured by the camera unless explicitly authorized by the user.
+    <h2>How We Use Your Data</h2>
+    <p>The camera data is processed locally on your device and is not transmitted to our servers unless you explicitly choose to upload it.</p>
+    <p>We implement industry-standard security measures to protect your data from unauthorized access, alteration, or disclosure.</p>
 
-2. How We Use Your Data
-   - The camera data is processed locally on your device and is not transmitted to our servers unless you explicitly choose to upload it.
+    <h2>Data Sharing</h2>
+    <p>We do not share your data with third parties unless required by law.</p>
 
-3. Data Sharing
-   - We do not share your data with third parties unless required by law.
+    <h2>User Rights</h2>
+    <p>You can revoke camera access at any time through your device's settings. We will request your explicit consent before accessing your device's camera.</p>
 
-4. User Rights
-   - You can revoke camera access at any time through your device's settings.
+    <h2>Children's Privacy</h2>
+    <p>Our app is not intended for use by individuals under the age of 13. We do not knowingly collect personal information from children under 13.</p>
 
-5. Contact Us
-   - For questions about this privacy policy, please contact us at informtojijo@gmail.com.
+    <h2>Contact Us</h2>
+    <p>For any questions or concerns regarding this privacy policy, please contact us at: <a href="mailto:informtojijo@gmail.com">informtojijo@gmail.com</a>.</p>
+
+    <h2>Changes to This Privacy Policy</h2>
+    <p>We may update this privacy policy from time to time. Any changes will be posted on this page with an updated effective date. We encourage you to review this policy periodically.</p>
+  </div>
+</body>
+</html>
